done journey-site header and started footer

--- a/new-try/index.html
+++ b/new-try/index.html
@@ -4,6 +4,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/footer.css">
+    <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/index.css">
     <link rel="stylesheet" href="assets/css/main.css">
     <meta charset="UTF-8">
@@ -12,11 +14,21 @@
 </head>
 <body>
     <header>
+        <p class="name">Thomas Ernesto Ginder</p>
+        <p class="bio"> <a href="bio.html" target="_blank">About me</a></p>
+        <div class="social">
+            <a href="https://www.facebook.com/thomas.ginderjuve" target="_blank">
+                <img src="assets/images/facebook-logo.webp" alt="" class="facebook">
+            </a>
+            <a href="https://www.instagram.com/thommy_ghinda/" target="_blank">
+                <img src="assets/images/instagram-logo.webp" alt="" class="insta">
+            </a>
+        </div>
+        <p class="github"><a href="https://github.com/FreeEnd00" target="_blank">My GitHub</a></p>
 
     </header>
     <main>
         <p class="title">
-            I'm Thomas Ernesto Ginder and
            <strong>Welcome</strong> to my coding  <span>journey!</span>
            </p>
         <div class="grid-container">
@@ -73,11 +85,13 @@
                      the sensational aspect of logic, and the full-emotional feeling of doing a complex code that works how I want to.
                 </p>
             </div>
-            <img src="assets/images/html-css.jpg" alt="" class="html-css">
+            <img src="assets/images/html-css.png" alt="" class="html-css">
         </div>
     </main>
     <footer>
-
+        <p class="contact">Contact me &#9660;
+            <form action=""></form>
+        </p>
     </footer>
 </body>
 </html>
