worked on conctat form popover

--- a/new-try/index.html
+++ b/new-try/index.html
@@ -89,9 +89,15 @@
         </div>
     </main>
     <footer>
-        <p class="contact">Contact me &#9660;
-            <form action=""></form>
-        </p>
+        <form class="contact-form" popover id="contact-form">
+            <label for="first-name">First Name:</label>
+            <input type="text" name="first-name" id="first-name" placeholder="Thomas">
+            <label for="email">Email:</label>
+            <input type="email" name="email" id="email" placeholder="thomas.ginder00@gmail.com">
+            <label for="phone-number">Phone Number:</label>
+            <input type="number" name="phone-number" id="phone-number" placeholder="+39 377 174 9747">
+        </form>
+        <button class="contact" popovertarget="contact-form">Contact me &#9660;</button>
     </footer>
 </body>
 </html>
