Ended responsivity on Journey.html(new-name of index.html) and started working on index.html

--- a/new-try/index.html
+++ b/new-try/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/footer.css">
-    <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/index.css">
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/header.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
+    <link rel="stylesheet" href="assets/css/firstpage.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thomas Ernesto Ginder's Portfolio</title>
 </head>
 <body>
     <header>
-        <p class="name">Thomas Ernesto Ginder</p>
+        <p class="name"><a href="journey.html"></a>My Journey</p>
         <p class="bio"> <a href="bio.html" target="_blank">About me</a></p>
         <div class="social">
             <a href="https://www.facebook.com/thomas.ginderjuve" target="_blank">
@@ -25,68 +22,9 @@
             </a>
         </div>
         <p class="github"><a href="https://github.com/FreeEnd00" target="_blank">My GitHub</a></p>
-
     </header>
     <main>
-        <p class="title">
-           <strong>Welcome</strong> to my coding  <span>journey!</span>
-           </p>
-        <div class="grid-container">
-            <div class="grid-texts">
-                <p class="grid-title">
-                    SIEMENS Step 5 & 7
-                </p>
-                <p class="grid-story">
-                    I graduated with 87/100 in the Maintenance Technician studying path
-                         from <a href="https://www.ipsiameucci.edu.it/" 
-                         target="_blank">I.P.S.I.A. A. Meucci</a>
-                          Professional High-School in Cagliari,
-                       Sardinia. I also took an electrician regional qualification with
-                      94/100. I loved study electrical subjects, but most important,
-                       I was fascinated by the programming language SIEMENS Step 5 and
-                        Step 7. I loved the logic behind and the satisfaction of 
-                       creating and fixing codes, especially the tough ones.
-                </p>
-            </div>
-            <img src="assets/images/electrician.jpg" alt="" class="electrician">
-        </div>
-        <div class="grid-container">
-            <div class="images-py">
-                <img src="assets/images/python-course-01.PNG" alt="" class="course1">
-                <img src="assets/images/python.jpg" alt="" class="python">
-                <img src="assets/images/python-course-2.PNG" alt="" class="course2">
-            </div>
-            <div class="grid-texts">
-                <p class="grid-title">
-                    Python
-                </p>
-                <p class="grid-story">
-                    After my school graduation and some job experience in an optical fiber
-                    company and plastic bags factory, I decided to dedicate better my time to improving my 
-                   coding, so I looked for some web coding course than I found an <a href="https://www.edx.org/" target="_blank">edX</a> begginers
-                   course offered by MichiganX &#40;an online learning initiative of the University of
-                   Michigan&#41; for Python devided in 2 main parts; the first for getting started
-                   and the second for Python Data Structures, pretty cheap for starting my coding career.
-                </p>
-            </div>
-        </div>
-        <div class="grid-container">
-            <div class="grid-texts">
-                <p class="grid-title">
-                    Html & Css
-                </p>
-                <p class="grid-story">
-                    Under the advice of one of my close friends, I decided to start a Master's in Back End Development
-                    at <a href="https://www.start2impact.it/">Start2Impact University</a> because I was missing
-                    programming and tired of doing nothing or unsatisfactory jobs. So I started with a course in HTML & CSS and
-                    this is my first project &#40;I also made a <a href="assets/yt-clone/youtube.html" target="_blank">YouTube clone</a> following a
-                     video tutorial by <a href="https://www.youtube.com/watch?v=G3e-cpL7ofc&t=2662s">SuperSimpleDev</a>&#41;.
-                     Now I'm again getting the beautiful feeling of coding,
-                     the sensational aspect of logic, and the full-emotional feeling of doing a complex code that works how I want to.
-                </p>
-            </div>
-            <img src="assets/images/html-css.png" alt="" class="html-css">
-        </div>
+
     </main>
     <footer>
         <button class="form-button" popovertarget="contact-form">Contact me!</button>
