started index.html (first page of the website) in smartphone layout

--- a/new-try/index.html
+++ b/new-try/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&family=Protest+Strike&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/index.css">
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/footer.css">
-    <link rel="stylesheet" href="assets/css/firstpage.css">
+    <link rel="stylesheet" href="assets/css/index-main.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thomas Ernesto Ginder's Portfolio</title>
@@ -12,20 +18,34 @@
 
 <body>
     <header>
-        <p class="name"><a href="journey.html"></a>My Journey</p>
-        <p class="bio"> <a href="bio.html" target="_blank">About me</a></p>
+        <p class="journey"><a href="journey.html">My Journey</a></p>
+        <p class="bio"> <a href="bio.html">About me</a></p>
         <div class="social">
-            <a href="https://www.facebook.com/thomas.ginderjuve" target="_blank">
+            <a href="https://www.facebook.com/thomas.ginderjuve">
                 <img src="assets/images/facebook-logo.webp" alt="" class="facebook">
             </a>
-            <a href="https://www.instagram.com/thommy_ghinda/" target="_blank">
+            <a href="https://www.instagram.com/thommy_ghinda/">
                 <img src="assets/images/instagram-logo.webp" alt="" class="insta">
             </a>
         </div>
-        <p class="github"><a href="https://github.com/FreeEnd00" target="_blank">My GitHub</a></p>
+        <p class="github"><a href="https://github.com/FreeEnd00">My GitHub</a></p>
     </header>
     <main>
-
+        <div class="full-name">
+            <div class="name-container">
+                <p class="name">Thomas</p>
+            </div>
+            <div class="second-name-container">
+                <p class="second-name">Ernesto</p>
+            </div>
+            <div class="surname-container">
+                <p class="surname">Ginder</p>
+            </div>
+        </div>
+        <div class="kinder-container">
+            <p class="kinder">Like Kinder but with a G</p>
+            <img src="assets/images/kinder.jpg" alt="kinder">
+        </div>
     </main>
     <footer>
         <button class="form-button" popovertarget="contact-form">Contact me!</button>
