--- a/new-try/journey.html
+++ b/new-try/journey.html
@@ -7,24 +7,24 @@
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/index.css">
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/journey-main.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Coding Journey</title>
 </head>
 <body>
     <header>
-        <p class="name"><a href="journey.html"></a>My Journey</p>
-        <p class="bio"> <a href="bio.html" target="_blank">About me</a></p>
+        <p class="journey"> <a href="journey.html">My Journey</a></p>
+        <p class="bio"> <a href="bio.html">About me</a></p>
         <div class="social">
-            <a href="https://www.facebook.com/thomas.ginderjuve" target="_blank">
+            <a href="https://www.facebook.com/thomas.ginderjuve">
                 <img src="assets/images/facebook-logo.webp" alt="" class="facebook">
             </a>
-            <a href="https://www.instagram.com/thommy_ghinda/" target="_blank">
+            <a href="https://www.instagram.com/thommy_ghinda/">
                 <img src="assets/images/instagram-logo.webp" alt="" class="insta">
             </a>
         </div>
-        <p class="github"><a href="https://github.com/FreeEnd00" target="_blank">My GitHub</a></p>
+        <p class="github"><a href="https://github.com/FreeEnd00">My GitHub</a></p>
 
     </header>
     <main>
