continued index.html backgraund image on main

--- a/new-try/index.html
+++ b/new-try/index.html
@@ -44,7 +44,7 @@
         </div>
         <div class="kinder-container">
             <p class="kinder">Like Kinder but with a G</p>
-            <img src="assets/images/kinder.jpg" alt="kinder">
+            <img src="assets/images/kinder.png" alt="kinder">
         </div>
     </main>
     <footer>
