--- a/new-try/journey.html
+++ b/new-try/journey.html
@@ -14,6 +14,11 @@
 </head>
 <body>
     <header>
+        <div class="home-container">
+            <a href="index.html">
+                <img src="assets/icons/home.svg" alt="home">
+            </a>
+        </div>
         <p class="journey"> <a href="journey.html">My Journey</a></p>
         <p class="bio"> <a href="bio.html">About me</a></p>
         <div class="social">
@@ -28,65 +33,67 @@
 
     </header>
     <main>
-        <p class="title">
-           <strong>Welcome</strong> to my coding  <span>journey!</span>
-           </p>
-        <div class="grid-container">
-            <div class="grid-texts">
-                <p class="grid-title">
-                    SIEMENS Step 5 & 7
+        <div class="main-container">
+            <p class="title">
+                <strong>Welcome</strong> to my coding  <span>journey!</span>
                 </p>
-                <p class="grid-story">
-                    I graduated with 87/100 in the Maintenance Technician studying path
-                         from <a href="https://www.ipsiameucci.edu.it/" 
-                         target="_blank">I.P.S.I.A. A. Meucci</a>
-                          Professional High-School in Cagliari,
-                       Sardinia. I also took an electrician regional qualification with
-                      94/100. I loved study electrical subjects, but most important,
-                       I was fascinated by the programming language SIEMENS Step 5 and
-                        Step 7. I loved the logic behind and the satisfaction of 
-                       creating and fixing codes, especially the tough ones.
-                </p>
-            </div>
-            <img src="assets/images/electrician.jpg" alt="" class="electrician">
-        </div>
-        <div class="grid-container reverse">
-            <div class="images-py">
-                <img src="assets/images/python-course-01.PNG" alt="" class="course1">
-                <img src="assets/images/python.jpg" alt="" class="python">
-                <img src="assets/images/python-course-2.PNG" alt="" class="course2">
-            </div>
-            <div class="grid-texts">
-                <p class="grid-title">
-                    Python
-                </p>
-                <p class="grid-story">
-                    After my school graduation and some job experience in an optical fiber
-                    company and plastic bags factory, I decided to dedicate better my time to improving my 
-                   coding, so I looked for some web coding course than I found an <a href="https://www.edx.org/" target="_blank">edX</a> begginers
-                   course offered by MichiganX &#40;an online learning initiative of the University of
-                   Michigan&#41; for Python devided in 2 main parts; the first for getting started
-                   and the second for Python Data Structures, pretty cheap for starting my coding career.
-                </p>
-            </div>
-        </div>
-        <div class="grid-container">
-            <div class="grid-texts">
-                <p class="grid-title">
-                    Html & Css
-                </p>
-                <p class="grid-story">
-                    Under the advice of one of my close friends, I decided to start a Master's in Back End Development
-                    at <a href="https://www.start2impact.it/">Start2Impact University</a> because I was missing
-                    programming and tired of doing nothing or unsatisfactory jobs. So I started with a course in HTML & CSS and
-                    this is my first project &#40;I also made a <a href="assets/yt-clone/youtube.html" target="_blank">YouTube clone</a> following a
-                     video tutorial by <a href="https://www.youtube.com/watch?v=G3e-cpL7ofc&t=2662s">SuperSimpleDev</a>&#41;.
-                     Now I'm again getting the beautiful feeling of coding,
-                     the sensational aspect of logic, and the full-emotional feeling of doing a complex code that works how I want to.
-                </p>
-            </div>
-            <img src="assets/images/html-css.png" alt="" class="html-css">
-        </div>
+             <div class="grid-container">
+                 <div class="grid-texts">
+                     <p class="grid-title">
+                         SIEMENS Step 5 & 7
+                     </p>
+                     <p class="grid-story">
+                         I graduated with 87/100 in the Maintenance Technician studying path
+                              from <a href="https://www.ipsiameucci.edu.it/" 
+                              target="_blank">I.P.S.I.A. A. Meucci</a>
+                               Professional High-School in Cagliari,
+                            Sardinia. I also took an electrician regional qualification with
+                           94/100. I loved study electrical subjects, but most important,
+                            I was fascinated by the programming language SIEMENS Step 5 and
+                             Step 7. I loved the logic behind and the satisfaction of 
+                            creating and fixing codes, especially the tough ones.
+                     </p>
+                 </div>
+                 <img src="assets/images/electrician.jpg" alt="" class="electrician">
+             </div>
+             <div class="grid-container reverse">
+                 <div class="images-py">
+                     <img src="assets/images/python-course-01.PNG" alt="" class="course1">
+                     <img src="assets/images/python.jpg" alt="" class="python">
+                     <img src="assets/images/python-course-2.PNG" alt="" class="course2">
+                 </div>
+                 <div class="grid-texts">
+                     <p class="grid-title">
+                         Python
+                     </p>
+                     <p class="grid-story">
+                         After my school graduation and some job experience in an optical fiber
+                         company and plastic bags factory, I decided to dedicate better my time to improving my 
+                        coding, so I looked for some web coding course than I found an <a href="https://www.edx.org/" target="_blank">edX</a> begginers
+                        course offered by MichiganX &#40;an online learning initiative of the University of
+                        Michigan&#41; for Python devided in 2 main parts; the first for getting started
+                        and the second for Python Data Structures, pretty cheap for starting my coding career.
+                     </p>
+                 </div>
+             </div>
+             <div class="grid-container">
+                 <div class="grid-texts">
+                     <p class="grid-title">
+                         Html & Css
+                     </p>
+                     <p class="grid-story">
+                         Under the advice of one of my close friends, I decided to start a Master's in Back End Development
+                         at <a href="https://www.start2impact.it/">Start2Impact University</a> because I was missing
+                         programming and tired of doing nothing or unsatisfactory jobs. So I started with a course in HTML & CSS and
+                         this is my first project &#40;I also made a <a href="assets/yt-clone/youtube.html" target="_blank">YouTube clone</a> following a
+                          video tutorial by <a href="https://www.youtube.com/watch?v=G3e-cpL7ofc&t=2662s">SuperSimpleDev</a>&#41;.
+                          Now I'm again getting the beautiful feeling of coding,
+                          the sensational aspect of logic, and the full-emotional feeling of doing a complex code that works how I want to.
+                     </p>
+                 </div>
+                 <img src="assets/images/html-css.png" alt="" class="html-css">
+             </div>  
+        </div>   
     </main>
     <footer>
         <button class="form-button" popovertarget="contact-form">Contact me!</button>
