started bio.html and added background color (and border) to selected page on header

--- a/new-try/journey.html
+++ b/new-try/journey.html
@@ -19,7 +19,10 @@
                 <img src="assets/icons/home.svg" alt="home">
             </a>
         </div>
-        <p class="journey"> <a href="journey.html">My Journey</a></p>
+        <div class="journey-container">
+            <p class="journey"><a href="journey.html">My Journey</a></p>
+        </div>
+
         <p class="bio"> <a href="bio.html">About me</a></p>
         <div class="social">
             <a href="https://www.facebook.com/thomas.ginderjuve">
