continued bio.html added icons and mentions

--- a/new-try/index.html
+++ b/new-try/index.html
@@ -51,6 +51,10 @@
             <p class="kinder">Like Kinder but with a G</p>
             <img src="assets/images/kinder.png" alt="kinder">
         </div>
+        <div class="bg-mention">
+            <a class="background-mention" href="https://www.freepik.com/free-vector/color-seamless-space-pattern_10838001.htm#query=space%20pattern&position=10&from_view=keyword&track=ais&uuid=ebc119a8-dcc4-4d07-b918-bc77d584e3de">Background Image by tartila</a>
+             on Freepik
+        </div>
     </main>
     <footer>
         <button class="form-button" popovertarget="contact-form">Contact me!</button>
