made some adjustment

--- a/new-try/mentions.html
+++ b/new-try/mentions.html
@@ -21,14 +21,14 @@
             <p class="bio"> <a href="bio.html">About me</a></p>
         </div>
         <div class="social">
-            <a href="https://www.facebook.com/thomas.ginderjuve">
+            <a href="https://www.facebook.com/thomas.ginderjuve" target="_blank">
                 <img src="assets/images/facebook-logo.webp" alt="" class="facebook">
             </a>
-            <a href="https://www.instagram.com/thommy_ghinda/">
+            <a href="https://www.instagram.com/thommy_ghinda/" target="_blank">
                 <img src="assets/images/instagram-logo.webp" alt="" class="insta">
             </a>
         </div>
-        <p class="github"><a href="https://github.com/FreeEnd00">My GitHub</a></p>
+        <p class="github"><a href="https://github.com/FreeEnd00" target="_blank">My GitHub</a></p>
     </header>
     <main>
         <p class="title">
