done the seo of the website and made some fix (header and journey)

--- a/new-try/About_me/index.html
+++ b/new-try/About_me/index.html
@@ -7,10 +7,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/bio.css">
-    <link rel="stylesheet" href="assets/css/index.css">
-    <link rel="stylesheet" href="assets/css/header.css">
-    <link rel="stylesheet" href="assets/css/footer.css">
+    <link rel="stylesheet" href="../assets/css/bio.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/css/header.css">
+    <link rel="stylesheet" href="../assets/css/footer.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About me</title>
@@ -18,20 +18,20 @@
 <body>
     <header>
         <div class="home-container">
-            <a href="index.html">
-                <img src="assets/icons/home.svg" alt="home">
+            <a href="../Home_Page/">
+                <img src="../assets/icons/home.svg" alt="home">
             </a>
         </div>
-        <p class="journey"><a href="journey.html">My Journey</a></p>
+        <p class="journey"><a href="../My_Journey/">My Journey</a></p>
         <div class="about-me-container">
-            <p class="bio"> <a href="bio.html">About me</a></p>
+            <p class="bio"> <a href="../About_me/">About me</a></p>
         </div>
         <div class="social">
             <a href="https://www.facebook.com/thomas.ginderjuve" target="_blank">
-                <img src="assets/images/facebook-logo.webp" alt="" class="facebook">
+                <img src="../assets/images/facebook-logo.webp" alt="" class="facebook">
             </a>
             <a href="https://www.instagram.com/thommy_ghinda/" target="_blank">
-                <img src="assets/images/instagram-logo.webp" alt="" class="insta">
+                <img src="../assets/images/instagram-logo.webp" alt="" class="insta">
             </a>
         </div>
         <p class="github"><a href="https://github.com/FreeEnd00" target="_blank">My GitHub</a></p>
@@ -39,7 +39,7 @@
     <main>
         <div class="biography">
             <div class="my-photo-container">
-                <img class="my-photo" src="assets/images/my-photo.jpg" alt="">
+                <img class="my-photo" src="../assets/images/my-photo.jpg" alt="">
             </div>
             <p class="bio-text">
                 Hi, I am Thomas Ernesto Ginder, I am 23 years old, and I am from Sardinia, Italy my last name 
@@ -54,14 +54,14 @@
         <p class="title">Things I like:</p>
         <ul>
             <div class="like-container">
-                <li class="gaming"><img src="assets/icons/game-controller.png" alt="">Gaming <img src="assets/icons/heart.png" alt=""><img src="assets/icons/minecraft.png" alt=""></li>
-                <li class="board"><img src="assets/icons/chess.png" alt="">Board Games <img src="assets/icons/dice.png" alt=""><img src="assets/icons/monopoly.png" alt=""></li>
-                <li class="music"><img src="assets/icons/electronic.png" alt="">Music <img src="assets/icons/headphones.png" alt=""><img src="assets/icons/echo.png" alt=""></li>
-                <li class="chun"><img src="assets/icons/wing-chun.png" alt="">Wing Chun <img src="assets/icons/tan.png" alt=""> <img src="assets/icons/gloves.png" alt=""></li>
-                <li class="eat"><img src="assets/icons/pizza.png" alt="">Eating <img src="assets/icons/cookie.png" alt=""><img src="assets/icons/egg.png" alt=""></li>
-                <li class="dogs"><img src="assets/icons/dog.png" alt="">Dogs <img src="assets/icons/collar.png" alt=""><img src="assets/icons/puppy.png" alt=""></li>
-                <li class="climate"><img src="assets/icons/planet.png" alt="">Environment <img src="assets/icons/volunteering.png" alt=""><img src="assets/icons/co2.png" alt=""></li>
-                <li class="astronomy"><img src="assets/icons/telescope.png" alt="">Astonomy <img src="assets/icons/moon.png" alt=""><img src="assets/icons/galaxy.png" alt=""></li>
+                <li class="gaming"><img src="../assets/icons/game-controller.png" alt="">Gaming <img src="../assets/icons/heart.png" alt=""><img src="../assets/icons/minecraft.png" alt=""></li>
+                <li class="board"><img src="../assets/icons/chess.png" alt="">Board Games <img src="../assets/icons/dice.png" alt=""><img src="../assets/icons/monopoly.png" alt=""></li>
+                <li class="music"><img src="../assets/icons/electronic.png" alt="">Music <img src="../assets/icons/headphones.png" alt=""><img src="../assets/icons/echo.png" alt=""></li>
+                <li class="chun"><img src="../assets/icons/wing-chun.png" alt="">Wing Chun <img src="../assets/icons/tan.png" alt=""> <img src="../assets/icons/gloves.png" alt=""></li>
+                <li class="eat"><img src="../assets/icons/pizza.png" alt="">Eating <img src="../assets/icons/cookie.png" alt=""><img src="../assets/icons/egg.png" alt=""></li>
+                <li class="dogs"><img src="../assets/icons/dog.png" alt="">Dogs <img src="../assets/icons/collar.png" alt=""><img src="../assets/icons/puppy.png" alt=""></li>
+                <li class="climate"><img src="../assets/icons/planet.png" alt="">Environment <img src="../assets/icons/volunteering.png" alt=""><img src="../assets/icons/co2.png" alt=""></li>
+                <li class="astronomy"><img src="../assets/icons/telescope.png" alt="">Astonomy <img src="../assets/icons/moon.png" alt=""><img src="../assets/icons/galaxy.png" alt=""></li>
             </div>
         </ul>
     </main>
@@ -88,7 +88,7 @@
         </div>
     </footer>
         <button class="mentions">
-            <a href="../new-try/mentions.html">Icons Mentions</a>
+            <a href="../Mentions/">Icons Mentions</a>
         </button>
 </body>
 </html>
