--- a/new-try/Home_Page/index.html
+++ b/new-try/Home_Page/index.html
@@ -7,10 +7,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/index.css">
-    <link rel="stylesheet" href="assets/css/header.css">
-    <link rel="stylesheet" href="assets/css/footer.css">
-    <link rel="stylesheet" href="assets/css/index-main.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/css/header.css">
+    <link rel="stylesheet" href="../assets/css/footer.css">
+    <link rel="stylesheet" href="../assets/css/home-page.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thomas Ernesto Ginder's Portfolio</title>
@@ -19,18 +19,18 @@
 <body>
     <header>
         <div class="home-container">
-            <a href="index.html">
-                <img src="assets/icons/home.svg" alt="home">
+            <a href="../Home_Page/">
+                <img src="../assets/icons/home.svg" alt="home">
             </a>
         </div>
-        <p class="journey"><a href="journey.html">My Journey</a></p>
-        <p class="bio"> <a href="bio.html">About me</a></p>
+        <p class="journey"><a href="../My_Journey/">My Journey</a></p>
+        <p class="bio"> <a href="../About_me/">About me</a></p>
         <div class="social">
             <a href="https://www.facebook.com/thomas.ginderjuve" target="_blank">
-                <img src="assets/images/facebook-logo.webp" alt="" class="facebook">
+                <img src="../assets/images/facebook-logo.webp" alt="" class="facebook">
             </a>
             <a href="https://www.instagram.com/thommy_ghinda/" target="_blank">
-                <img src="assets/images/instagram-logo.webp" alt="" class="insta">
+                <img src="../assets/images/instagram-logo.webp" alt="" class="insta">
             </a>
         </div>
         <p class="github"><a href="https://github.com/FreeEnd00" target="_blank">My GitHub</a></p>
@@ -49,7 +49,7 @@
         </div>
         <div class="kinder-container">
             <p class="kinder">Like Kinder but with a G</p>
-            <img src="assets/images/kinder.png" alt="kinder">
+            <img src="../assets/images/kinder.png" alt="kinder">
         </div>
         <div class="bg-mention">
             <a class="background-mention" href="https://www.freepik.com/free-vector/color-seamless-space-pattern_10838001.htm#query=space%20pattern&position=10&from_view=keyword&track=ais&uuid=ebc119a8-dcc4-4d07-b918-bc77d584e3de">Background Image by tartila</a>
