--- a/new-try/My_Journey/index.html
+++ b/new-try/My_Journey/index.html
@@ -4,10 +4,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/footer.css">
-    <link rel="stylesheet" href="assets/css/header.css">
-    <link rel="stylesheet" href="assets/css/index.css">
-    <link rel="stylesheet" href="assets/css/journey.css">
+    <link rel="stylesheet" href="../assets/css/footer.css">
+    <link rel="stylesheet" href="../assets/css/header.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/css/journey.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Coding Journey</title>
@@ -15,21 +15,21 @@
 <body>
     <header>
         <div class="home-container">
-            <a href="index.html">
-                <img src="assets/icons/home.svg" alt="home">
+            <a href="../Home_Page/">
+                <img src="../assets/icons/home.svg" alt="home">
             </a>
         </div>
         <div class="journey-container">
-            <p class="journey"><a href="journey.html">My Journey</a></p>
+            <p class="journey"><a href="../My_Journey/">My Journey</a></p>
         </div>
 
-        <p class="bio"> <a href="bio.html">About me</a></p>
+        <p class="bio"> <a href="../About_me/">About me</a></p>
         <div class="social">
             <a href="https://www.facebook.com/thomas.ginderjuve" target="_blank">
-                <img src="assets/images/facebook-logo.webp" alt="" class="facebook">
+                <img src="../assets/images/facebook-logo.webp" alt="" class="facebook">
             </a>
             <a href="https://www.instagram.com/thommy_ghinda/" target="_blank">
-                <img src="assets/images/instagram-logo.webp" alt="" class="insta">
+                <img src="../assets/images/instagram-logo.webp" alt="" class="insta">
             </a>
         </div>
         <p class="github"><a href="https://github.com/FreeEnd00" target="_blank">My GitHub</a></p>
@@ -37,9 +37,11 @@
     </header>
     <main>
         <div class="main-container">
-            <p class="title">
-                <strong>Welcome</strong> to my coding  <span>journey!</span>
-                </p>
+            <div class="title-container">
+                <p class="title">
+                    <strong>Welcome</strong> to my coding  <span>journey!</span>
+                    </p>
+            </div>
              <div class="grid-container">
                  <div class="grid-texts">
                      <p class="grid-title">
@@ -57,13 +59,13 @@
                             creating and fixing codes, especially the tough ones.
                      </p>
                  </div>
-                 <img src="assets/images/electrician.jpg" alt="" class="electrician">
+                 <img src="../assets/images/electrician.jpg" alt="" class="electrician">
              </div>
              <div class="grid-container reverse">
                  <div class="images-py">
-                     <img src="assets/images/python-course-01.PNG" alt="" class="course1">
-                     <img src="assets/images/python.jpg" alt="" class="python">
-                     <img src="assets/images/python-course-2.PNG" alt="" class="course2">
+                     <img src="../assets/images/python-course-01.PNG" alt="" class="course1">
+                     <img src="../assets/images/python.jpg" alt="" class="python">
+                     <img src="../assets/images/python-course-2.PNG" alt="" class="course2">
                  </div>
                  <div class="grid-texts">
                      <p class="grid-title">
@@ -88,13 +90,13 @@
                          Under the advice of one of my close friends, I decided to start a Master's in Back End Development
                          at <a href="https://www.start2impact.it/">Start2Impact University</a> because I was missing
                          programming and tired of doing nothing or unsatisfactory jobs. So I started with a course in HTML & CSS and
-                         this is my first project &#40;I also made a <a href="assets/yt-clone/youtube.html" target="_blank">YouTube clone</a> following a
+                         this is my first project &#40;I also made a <a href="../assets/yt-clone/youtube.html" target="_blank">YouTube clone</a> following a
                           video tutorial by <a href="https://www.youtube.com/watch?v=G3e-cpL7ofc&t=2662s">SuperSimpleDev</a>&#41;.
                           Now I'm again getting the beautiful feeling of coding,
                           the sensational aspect of logic, and the full-emotional feeling of doing a complex code that works how I want to.
                      </p>
                  </div>
-                 <img src="assets/images/html-css.png" alt="" class="html-css">
+                 <img src="../assets/images/html-css.png" alt="" class="html-css">
              </div>  
         </div>   
     </main>
