maded fixing in home page

--- a/new-try/About_me/index.html
+++ b/new-try/About_me/index.html
@@ -42,26 +42,26 @@
                 <img class="my-photo" src="../assets/images/my-photo.jpg" alt="">
             </div>
             <p class="bio-text">
-                Hi, I am Thomas Ernesto Ginder, I am 23 years old, and I am from Sardinia, Italy my last name 
+                Hi, I am Thomas Ernesto Ginder, I'm 23 years old guy from Sardinia, Italy. My last name 
                 can trick someone because my dad is from Germany. My dream is to become a professional software
-                developer and who knows, maybe one day, become a robotic engineer. One of my goals is to
+                developer and who knows, become a robotic engineer. One of my goals is to
                 improve life on our planet with my programs. I consider myself a very kind person with a
-                lot of energy to improve myself and my work every day, a messy but fussy person who loves
+                lot of energy to improve myself and my work every day, a messy but pedant person who loves
                 to use logic to create everything that can give me a satisfying output. I prefer slow but
-                detailed work beside fast and trivial work because a hurry is never good.
+                detailed work instead a fast and trivial work because a hurry is never good.
             </p>
         </div> 
         <p class="title">Things I like:</p>
         <ul>
             <div class="like-container">
-                <li class="gaming"><img src="../assets/icons/game-controller.png" alt="">Gaming <img src="../assets/icons/heart.png" alt=""><img src="../assets/icons/minecraft.png" alt=""></li>
-                <li class="board"><img src="../assets/icons/chess.png" alt="">Board Games <img src="../assets/icons/dice.png" alt=""><img src="../assets/icons/monopoly.png" alt=""></li>
-                <li class="music"><img src="../assets/icons/electronic.png" alt="">Music <img src="../assets/icons/headphones.png" alt=""><img src="../assets/icons/echo.png" alt=""></li>
-                <li class="chun"><img src="../assets/icons/wing-chun.png" alt="">Wing Chun <img src="../assets/icons/tan.png" alt=""> <img src="../assets/icons/gloves.png" alt=""></li>
-                <li class="eat"><img src="../assets/icons/pizza.png" alt="">Eating <img src="../assets/icons/cookie.png" alt=""><img src="../assets/icons/egg.png" alt=""></li>
-                <li class="dogs"><img src="../assets/icons/dog.png" alt="">Dogs <img src="../assets/icons/collar.png" alt=""><img src="../assets/icons/puppy.png" alt=""></li>
-                <li class="climate"><img src="../assets/icons/planet.png" alt="">Environment <img src="../assets/icons/volunteering.png" alt=""><img src="../assets/icons/co2.png" alt=""></li>
-                <li class="astronomy"><img src="../assets/icons/telescope.png" alt="">Astonomy <img src="../assets/icons/moon.png" alt=""><img src="../assets/icons/galaxy.png" alt=""></li>
+                <li class="gaming"><img src="../assets/icons/game-controller.png" alt="">Gaming <img src="../assets/icons/heart.png" alt=""></li>
+                <li class="board"><img src="../assets/icons/chess.png" alt="">Board Games <img src="../assets/icons/dice.png" alt=""></li>
+                <li class="music"><img src="../assets/icons/electronic.png" alt="">Music <img src="../assets/icons/headphones.png" alt=""></li>
+                <li class="chun"><img src="../assets/icons/wing-chun.png" alt="">Wing Chun <img src="../assets/icons/tan.png" alt=""></li>
+                <li class="eat"><img src="../assets/icons/pizza.png" alt="">Eating <img src="../assets/icons/cookie.png" alt=""></li>
+                <li class="dogs"><img src="../assets/icons/dog.png" alt="">Dogs<img src="../assets/icons/puppy.png" alt=""></li>
+                <li class="climate"><img src="../assets/icons/planet.png" alt="">Environment <img src="../assets/icons/volunteering.png" alt=""></li>
+                <li class="astronomy"><img src="../assets/icons/telescope.png" alt="">Astonomy <img src="../assets/icons/galaxy.png" alt=""></li>
             </div>
         </ul>
     </main>
