--- a/new-try/Home_Page/index.html
+++ b/new-try/Home_Page/index.html
@@ -43,8 +43,8 @@
             <div class="second-name-container">
                 <p class="second-name">Ernesto</p>
             </div>
-            <div class="surname-container">
-                <p class="surname">Ginder</p>
+            <div class="lastname-container">
+                <p class="lastname">Ginder</p>
             </div>
         </div>
         <div class="kinder-container">
@@ -52,7 +52,7 @@
             <img src="../assets/images/kinder.png" alt="kinder">
         </div>
         <div class="bg-mention">
-            <a class="background-mention" href="https://www.freepik.com/free-vector/color-seamless-space-pattern_10838001.htm#query=space%20pattern&position=10&from_view=keyword&track=ais&uuid=ebc119a8-dcc4-4d07-b918-bc77d584e3de">Background Image by tartila</a>
+            <a class="background-mention" href="https://www.freepik.com/free-vector/color-seamless-space-pattern_10838001.htm#query=space%20pattern&position=10&from_view=keyword&track=ais&uuid=ebc119a8-dcc4-4d07-b918-bc77d584e3de">Background Image by tartila </a>
              on Freepik
         </div>
     </main>
