--- a/new-try/My_Journey/index.html
+++ b/new-try/My_Journey/index.html
@@ -51,9 +51,9 @@
                          I graduated with 87/100 in the Maintenance Technician studying path
                               from <a href="https://www.ipsiameucci.edu.it/" 
                               target="_blank">I.P.S.I.A. A. Meucci</a>
-                               Professional High-School in Cagliari,
+                             High-School in Cagliari,
                             Sardinia. I also took an electrician regional qualification with
-                           94/100. I loved study electrical subjects, but most important,
+                           94/100. I loved study electrical subjects, but most importantly,
                             I was fascinated by the programming language SIEMENS Step 5 and
                              Step 7. I loved the logic behind and the satisfaction of 
                             creating and fixing codes, especially the tough ones.
@@ -73,11 +73,12 @@
                      </p>
                      <p class="grid-story">
                          After my school graduation and some job experience in an optical fiber
-                         company and plastic bags factory, I decided to dedicate better my time to improving my 
-                        coding, so I looked for some web coding course than I found an <a href="https://www.edx.org/" target="_blank">edX</a> begginers
-                        course offered by MichiganX &#40;an online learning initiative of the University of
-                        Michigan&#41; for Python devided in 2 main parts; the first for getting started
-                        and the second for Python Data Structures, pretty cheap for starting my coding career.
+                         company and plastic bags factory, I decided to improve my coding knowledge  
+                         so I found an <a href="https://www.edx.org/" target="_blank">edX</a> begginers
+                        course offered by the University of Michigan 
+                         for Python devided in 2 parts, for getting started
+                        and for Python Data Structures. That was prefect for start and introduce me to this world
+                         and starting my coding career.
                      </p>
                  </div>
              </div>
@@ -87,10 +88,11 @@
                          Html & Css
                      </p>
                      <p class="grid-story">
-                         Under the advice of one of my close friends, I decided to start a Master's in Back End Development
+                         After, I decided to start a Master's in Back End Development
                          at <a href="https://www.start2impact.it/">Start2Impact University</a> because I was missing
-                         programming and tired of doing nothing or unsatisfactory jobs. So I started with a course in HTML & CSS and
-                         this is my first project &#40;I also made a <a href="../assets/yt-clone/youtube.html" target="_blank">YouTube clone</a> following a
+                         programming and tired of doing jobs not for me. So I started with a course in HTML & CSS and
+                         this Web Site is my first project &#40;I also made a <a href="../assets/yt-clone/youtube.html" target="_blank">YouTube clone</a> 
+                         following a
                           video tutorial by <a href="https://www.youtube.com/watch?v=G3e-cpL7ofc&t=2662s">SuperSimpleDev</a>&#41;.
                           Now I'm again getting the beautiful feeling of coding,
                           the sensational aspect of logic, and the full-emotional feeling of doing a complex code that works how I want to.
