--- a/new-try/Mentions/index.html
+++ b/new-try/Mentions/index.html
@@ -44,26 +44,17 @@
             <div class="icons8-container">
                 <div class="icons8">
                     <a target="_blank" href="https://icons8.com/icon/5DANichneoqj/game-controller">Game Controller <img src="../assets/icons/game-controller.png" alt=""></a>
-                    <a target="_blank" href="https://icons8.com/icon/upd5xh7hPe0R/pixel-heart">Pixel Heart <img src="../assets/icons/heart.png" alt=""></a>
-                    <a target="_blank" href="https://icons8.com/icon/PQ7bo28SyNO6/minecraft-pickaxe">Minecraft Pickaxe <img src="../assets/icons/minecraft.png" alt=""></a>
-                    <a target="_blank" href="https://icons8.com/icon/10288/king">King <img src="../assets/icons/chess.png" alt=""></a>
+                    <a target="_blank" href="https://icons8.com/icon/upd5xh7hPe0R/pixel-heart">Pixel Heart <img src="../assets/icons/heart.png" alt=""></a>                    <a target="_blank" href="https://icons8.com/icon/10288/king">King <img src="../assets/icons/chess.png" alt=""></a>
                     <a target="_blank" href="https://icons8.com/icon/_j_F9jG67IQ1/dice">Dice <img src="../assets/icons/dice.png" alt=""></a>
-                    <a target="_blank" href="https://icons8.com/icon/0ODFcG2FuEpD/monopoly">Monopoly <img src="../assets/icons/monopoly.png" alt=""></a>
                     <a target="_blank" href="https://icons8.com/icon/12100/electronic-music">Electronic Music <img src="../assets/icons/electronic.png" alt=""></a>
                     <a target="_blank" href="https://icons8.com/icon/20747/headphones">Headphones <img src="../assets/icons/headphones.png" alt=""></a>
-                    <a target="_blank" href="https://icons8.com/icon/cScXmVslQeHF/amazon-echo">Amazon Echo <img src="../assets/icons/echo.png" alt=""></a>
-                    <a target="_blank" href="https://icons8.com/icon/9QnuAvsVxtMs/mma-fighter-glove">MMA Fighter Glove <img src="../assets/icons/gloves.png" alt=""></a>
                     <a target="_blank" href="https://icons8.com/icon/oTyopyeAHiFU/salami-pizza">Salami Pizza <img src="../assets/icons/pizza.png" alt=""></a>
                     <a target="_blank" href="https://icons8.com/icon/107442/cookie">Cookie <img src="../assets/icons/cookie.png" alt=""></a>
-                    <a target="_blank" href="https://icons8.com/icon/BeDidZchwnxG/fry">Fry <img src="../assets/icons/egg.png" alt=""></a>
                     <a target="_blank" href="https://icons8.com/icon/TO7tQS2Frpif/siba-inu-kawaii">Siba Inu Kawaii <img src="../assets/icons/dog.png" alt=""></a>
-                    <a target="_blank" href="https://icons8.com/icon/77235/dog-collar">Dog Collar <img src="../assets/icons/collar.png" alt=""></a>
                     <a target="_blank" href="https://icons8.com/icon/IZ93evILA9l5/puppy">Puppy <img src="../assets/icons/puppy.png" alt=""></a>
-                    <a target="_blank" href="https://icons8.com/icon/w7B57EZzIV9I/planet">Planet <img src="../assets/icons/planet.png" alt=""></a>
+                        <a target="_blank" href="https://icons8.com/icon/w7B57EZzIV9I/planet">Planet <img src="../assets/icons/planet.png" alt=""></a>
                     <a target="_blank" href="https://icons8.com/icon/16007/volunteering">Volunteering <img src="../assets/icons/volunteering.png" alt=""></a>
-                    <a target="_blank" href="https://icons8.com/icon/k41MIBjzAlR7/co2-reduction">Co2 Reduction <img src="../assets/icons/co2.png" alt=""></a>
                     <a target="_blank" href="https://icons8.com/icon/iuHJFo6arekf/telescope">Telescope <img src="../assets/icons/telescope.png" alt=""></a>
-                    <a target="_blank" href="https://icons8.com/icon/62034/moon">Moon <img src="../assets/icons/moon.png" alt=""></a>
                     <a target="_blank" href="https://icons8.com/icon/a2MFXoTTlsWP/nebula">Galaxy <img src="../assets/icons/galaxy.png" alt=""></a> 
                 </div>
                 <div class="icons8-author">
