--- a/new-try/My_Journey/index.html
+++ b/new-try/My_Journey/index.html
@@ -48,15 +48,12 @@
                          SIEMENS Step 5 & 7
                      </p>
                      <p class="grid-story">
-                         I graduated with 87/100 in the Maintenance Technician studying path
+                         I graduated with 87/100 in the Maintenance Technician studying programme
                               from <a href="https://www.ipsiameucci.edu.it/" 
-                              target="_blank">I.P.S.I.A. A. Meucci</a>
-                             High-School in Cagliari,
-                            Sardinia. I also took an electrician regional qualification with
-                           94/100. I loved study electrical subjects, but most importantly,
-                            I was fascinated by the programming language SIEMENS Step 5 and
-                             Step 7. I loved the logic behind and the satisfaction of 
-                            creating and fixing codes, especially the tough ones.
+                              target="_blank">I.P.S.I.A. A. Meucci</a>I also took an electrician qualification with an 
+                              overall grade of 94/100. I enjoyed delving into electrical subjects and was captivated by the 
+                              programming language SIEMENS Step 5 and Step 7. I was fascinated by the logic behind it 
+                              and the satisfaction of creating and fixing codes, especially the challenging ones.
                      </p>
                  </div>
                  <img src="../assets/images/electrician.jpg" alt="" class="electrician">
@@ -72,13 +69,11 @@
                          Python
                      </p>
                      <p class="grid-story">
-                         After my school graduation and some job experience in an optical fiber
-                         company and plastic bags factory, I decided to improve my coding knowledge  
-                         so I found an <a href="https://www.edx.org/" target="_blank">edX</a> begginers
-                        course offered by the University of Michigan 
-                         for Python devided in 2 parts, for getting started
-                        and for Python Data Structures. That was prefect for start and introduce me to this world
-                         and starting my coding career.
+                        After graduation, I worked for Infocom Impianti, an optical fiber company, and 
+                        for Nuova Sarmaplastik, a plastic bags factory. Despite my work experience in other sectors, 
+                        I was still intensely interested in programming. With this in mind, I took a beginner course offered 
+                        by the University of Michigan on <a href="https://www.edx.org/" target="_blank">edX</a>, focusing 
+                        on Python Data Structures. This course was ideal for starting my coding career.
                      </p>
                  </div>
              </div>
@@ -88,14 +83,12 @@
                          Html & Css
                      </p>
                      <p class="grid-story">
-                         After, I decided to start a Master's in Back End Development
-                         at <a href="https://www.start2impact.it/">Start2Impact University</a> because I was missing
-                         programming and tired of doing jobs not for me. So I started with a course in HTML & CSS and
-                         this Web Site is my first project &#40;I also made a <a href="../assets/yt-clone/youtube.html" target="_blank">YouTube clone</a> 
-                         following a
-                          video tutorial by <a href="https://www.youtube.com/watch?v=G3e-cpL7ofc&t=2662s">SuperSimpleDev</a>&#41;.
-                          Now I'm again getting the beautiful feeling of coding,
-                          the sensational aspect of logic, and the full-emotional feeling of doing a complex code that works how I want to.
+                        In order to deepen my interest in programming, I started a Master's in Back End Development
+                         at  <a href="https://www.start2impact.it/">Start2Impact University</a>. Next to a
+                          <a href="../assets/yt-clone/youtube.html" target="_blank">YouTube clone</a>, this Web Site is 
+                          among my first projects.  I am currently experiencing the thrill of coding, the fascinating aspect of 
+                          logic, and the 
+                        full-emotional sensation of doing a complex code that works how I want to once again.
                      </p>
                  </div>
                  <img src="../assets/images/html-css.png" alt="" class="html-css">
